--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "test": "node test.js"
   },
   "dependencies": {
-    "pg": "6.x",
+    "cool-ascii-faces": "1.3.4",
     "ejs": "2.5.6",
     "express": "4.15.2",
-    "cool-ascii-faces": "1.3.4"
+    "mongodb": "^2.2.33",
+    "mongoose": "^4.13.6",
+    "pg": "6.x"
   },
   "devDependencies": {
     "request": "^2.81.0",
