Finished log in

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI="mongodb://heroku_flpf5wsj:hrpfaq4p2m4742dolfdbq3kfkm@ds127936.mlab.com:27936/heroku_flpf5wsj"
+MONGODB_URI="mongodb://heroku_f9nb6r1s:a0ojrjrdrr6at3br8s6efvuo35@ds129796.mlab.com:29796/heroku_f9nb6r1s"
