--- a/package.json
+++ b/package.json
@@ -11,12 +11,21 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "bcrpyt": "^2.0.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "cool-ascii-faces": "1.3.4",
     "ejs": "2.5.6",
     "express": "4.15.2",
+    "express-session": "^1.15.6",
+    "express-validator": "^4.3.0",
     "mongodb": "^2.2.33",
     "mongoose": "^4.13.6",
-    "pg": "6.x"
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "pg": "^6.4.2"
   },
   "devDependencies": {
     "request": "^2.81.0",
