--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "cool-ascii-faces": "1.3.4",
     "ejs": "2.5.6",
     "express": "4.15.2",
+    "express-validator": "^4.3.0",
     "mongodb": "^2.2.33",
     "mongoose": "^4.13.6",
     "pg": "6.x"
